--- a/app/views/lookbook/inspector/panels/_notes.html.erb
+++ b/app/views/lookbook/inspector/panels/_notes.html.erb
@@ -1,6 +1,8 @@
 <style>
   .panel {
     padding: var(--lb-panel-padding);
+    background: var(--lb-color-white);
+    height: 100%;
   }
 
   section {
