--- a/app/components/lookbook/ui/elements/toolbar/toolbar.css
+++ b/app/components/lookbook/ui/elements/toolbar/toolbar.css
@@ -7,7 +7,7 @@
   display: flex;
   align-items: center;
   padding-left: var(--lb-spacing-md);
-  border-bottom: 1px solid var(--lb-divider-color);
+  border-bottom: 1px solid var(--lb-color-surface-divider);
 
   .toolbar-section {
     display: flex;
@@ -32,7 +32,7 @@
 
   [data-component="button-group"] {
     & + [data-component="button-group"] {
-      border-left: 1px solid var(--lb-divider-color);
+      border-left: 1px solid var(--lb-color-surface-divider);
     }
   }
 }
