--- a/assets/css/modes/dark.css
+++ b/assets/css/modes/dark.css
@@ -1,108 +1,128 @@
 :root[data-color-scheme="dark"] {
   color-scheme: dark;
 
+  --lb-color-surface-1: #252526;
+  --lb-color-surface-2: #2f2f2f;
+  --lb-color-surface-3: #37373c;
+
+  --lb-color-surface-divider: #444;
+  --lb-color-surface-inverted: var(--lb-color-gray-800);
+  --lb-color-surface-accent: var(--lb-color-indigo-600);
+
+  --lb-color-content-1: var(--lb-color-gray-300);
+  --lb-color-content-2: var(--lb-color-gray-400);
+  --lb-color-content-3: var(--lb-color-gray-600);
+
+  --lb-color-content-1-accent: var(--lb-color-indigo-300);
+  --lb-color-content-2-accent: var(--lb-color-indigo-400);
+  --lb-color-content-3-accent: var(--lb-color-indigo-600);
+
+  --lb-color-content-inverted: var(--lb-color-white);
+  --lb-color-content-positive: var(--lb-color-positive-600);
+  --lb-color-content-negative: var(--lb-color-negative-600);
+  --lb-color-content-info: var(--lb-color-info-600);
+  --lb-color-content-warning: var(--lb-color-warning-600);
+
   /*
    * General
    */
 
-  --lb-body-color: var(--lb-color-base-300);
-  --lb-divider-color: var(--lb-color-base-700);
-  --lb-focus-outline-color: var(--lb-color-accent-500);
+  --lb-focus-outline-color: var(--lb-color-content-3-accent);
 
   /*
    * Buttons
    */
 
-  --lb-button-color: var(--lb-color-base-300);
-  --lb-button-color-hover: var(--lb-color-base-100);
-  --lb-button-color-active: var(--lb-color-accent-300);
+  --lb-button-color: var(--lb-color-content-2);
+  --lb-button-color-hover: var(--lb-color-content-1);
+  --lb-button-color-active: var(--lb-color-content-2-accent);
 
   /*
    * Inputs
    */
 
-  --lb-input-color: var(--lb-body-color);
-  --lb-input-background-color: var(--lb-color-base-700);
-  --lb-input-border-color: var(--lb-color-base-600);
-  --lb-input-outline-color-focus: var(--lb-color-accent-800);
-  --lb-input-placeholder-color: var(--lb-color-base-500);
+  --lb-input-color: var(--lb-color-content-1);
+  --lb-input-background-color: var(--lb-color-surface-1);
+  --lb-input-border-color: var(--lb-color-surface-divider);
+  --lb-input-outline-color-focus: var(--lb-color-content-3-accent);
+  --lb-input-placeholder-color: var(--lb-color-content-2);
 
-  --lb-checkbox-color: var(--lb-color-accent-700);
-  --lb-checkbox-background-color: var(--lb-color-white);
-  --lb-checkbox-border-color: var(--lb-color-base-400);
-  --lb-checkbox-outline-color-focus: var(--lb-color-accent-500);
+  --lb-checkbox-color: var(--lb-color-content-1-accent);
+  --lb-checkbox-background-color: var(--lb-color-surface-1);
+  --lb-checkbox-border-color: var(--lb-color-content-3);
+  --lb-checkbox-outline-color-focus: var(--lb-color-content-2-accent);
 
   /*
    * Tables
    */
 
-  --lb-table-color: var(--lb-color-base-300);
-  --lb-table-border-color: var(--lb-divider-color);
-  --lb-table-background-color: var(--lb-color-base-900);
+  --lb-table-color: var(--lb-color-content-1);
+  --lb-table-border-color: var(--lb-color-surface-divider);
+  --lb-table-background-color: var(--lb-color-surface-1);
 
   /*
    * Dropdowns
    */
 
-  --lb-dropdown-color: var(--lb-body-color);
-  --lb-dropdown-background-color: var(--lb-color-base-800);
-  --lb-dropdown-border-color: var(--lb-divider-color);
+  --lb-dropdown-color: var(--lb-color-content-1);
+  --lb-dropdown-background-color: var(--lb-color-surface-1);
+  --lb-dropdown-border-color: var(--lb-color-surface-divider);
 
   /*
    * Toolbars
    */
 
-  --lb-toolbar-color: var(--lb-body-color);
-  --lb-toolbar-background-color: var(--lb-color-base-900);
+  --lb-toolbar-color: var(--lb-color-content-1);
+  --lb-toolbar-background-color: var(--lb-color-surface-1);
 
   /*
    * Tabs
    */
 
-  --lb-tab-color: var(--lb-color-base-300);
-  --lb-tab-color-disabled: var(--lb-color-base-500);
-  --lb-tab-color-selected: var(--lb-color-accent-400);
-  --lb-tab-border-color-selected: var(--lb-color-accent-400);
-  --lb-tab-panel-color: var(--lb-body-color);
-  --lb-tab-panel-background-color: var(--lb-color-base-800);
+  --lb-tab-color: var(--lb-color-content-2);
+  --lb-tab-color-disabled: var(--lb-color-content-3);
+  --lb-tab-color-selected: var(--lb-color-content-2-accent);
+  --lb-tab-border-color-selected: var(--lb-color-content-2-accent);
+  --lb-tab-panel-color: var(--lb-color-content-1);
+  --lb-tab-panel-background-color: var(--lb-color-surface-2);
 
   /*
    * Panes
    */
 
-  --lb-pane-background-color: var(--lb-color-base-800);
+  --lb-pane-background-color: var(--lb-color-surface-2);
 
   /*
    * Prose
    */
 
-  --lb-prose-color: var(--lb-body-color);
-  --lb-prose-list-counter-color: var(--lb-color-base-600);
-  --lb-prose-list-marker-color: var(--lb-color-base-400);
-  --lb-prose-hr-color: var(--lb-color-base-600);
-  --lb-prose-blockquote-color: var(--lb-color-base-700);
-  --lb-prose-blockquote-border-color: var(--lb-color-base-300);
-  --lb-prose-figcaption-color: var(--lb-color-base-600);
-  --lb-prose-inline-code-color: var(--lb-color-accent-900);
-  --lb-prose-inline-code-background-color: var(--lb-color-base-100);
-  --lb-prose-code-background-color: var(--lb-color-base-800);
-  --lb-prose-code-border-color: var(--lb-color-base-700);
+  --lb-prose-color: var(--lb-color-content-1);
+  --lb-prose-list-counter-color: var(--lb-color-content-2);
+  --lb-prose-list-marker-color: var(--lb-color-content-2);
+  --lb-prose-hr-color: var(--lb-color-content-2);
+  --lb-prose-blockquote-color: var(--lb-color-content-2);
+  --lb-prose-blockquote-border-color: var(--lb-color-content-3);
+  --lb-prose-figcaption-color: var(--lb-color-content-2);
+  --lb-prose-inline-code-color: var(--lb-color-content-accent-1);
+  --lb-prose-inline-code-background-color: var(--lb-color-surface-2);
+  --lb-prose-code-background-color: var(--lb-color-surface-1);
+  --lb-prose-code-border-color: var(--lb-color-surface-divider);
 
   /*
    * Breadcrumbs
    */
 
-  --lb-breadrumbs-color: var(--lb-color-base-500);
-  --lb-breadrumbs-color-current: var(--lb-color-base-300);
-  --lb-breadrumbs-link-color: var(--lb-color-base-500);
-  --lb-breadrumbs-link-color-hover: var(--lb-color-accent-300);
+  --lb-breadrumbs-color: var(--lb-color-content-2);
+  --lb-breadrumbs-color-current: var(--lb-color-content-1);
+  --lb-breadrumbs-link-color: var(--lb-color-content-2);
+  --lb-breadrumbs-link-color-hover: var(--lb-color-content-2-accent);
 
   /*
    * Header
    */
 
-  --lb-header-color: var(--lb-color-white);
-  --lb-header-background-color: var(--lb-color-accent-700);
+  --lb-header-color: var(--lb-color-content-inverted);
+  --lb-header-background-color: var(--lb-color-surface-accent);
 
   /*
    * Nav
@@ -110,85 +130,70 @@
 
   --lb-nav-item-background-color: transparent;
   --lb-nav-item-border-color: transparent;
-  --lb-nav-item-label-color: var(--lb-color-base-400);
-  --lb-nav-item-icon-color: var(--lb-color-accent-400);
-  --lb-nav-item-toggle-color: var(--lb-color-base-400);
+  --lb-nav-item-label-color: var(--lb-color-content-1);
+  --lb-nav-item-icon-color: var(--lb-color-content-1-accent);
+  --lb-nav-item-toggle-color: var(--lb-color-content-2);
 
-  --lb-nav-item-background-color-selected: var(--lb-color-base-700);
-  --lb-nav-item-border-color-selected: var(--lb-color-accent-500);
-  --lb-nav-item-label-color-selected: var(--lb-color-base-100);
-  --lb-nav-item-label-color-hover: var(--lb-color-base-200);
+  --lb-nav-item-background-color-selected: var(--lb-color-surface-3);
+  --lb-nav-item-border-color-selected: var(--lb-color-content-2-accent);
+  --lb-nav-item-label-color-selected: var(--lb-color-content-1);
+  --lb-nav-item-label-color-hover: var(--lb-color-content-1);
 
-  --lb-nav-placeholder-color: var(--lb-color-base-500);
-  --lb-nav-placeholder-border-color: var(--lb-divider-color);
-  --lb-nav-placeholder-background-color: var(--lb-color-white);
+  --lb-nav-placeholder-color: var(--lb-color-content-2);
+  --lb-nav-placeholder-border-color: var(--lb-color-surface-divider);
+  --lb-nav-placeholder-background-color: var(--lb-color-surface-1);
 
   /*
    * Status bar
    */
 
-  --lb-status-bar-color: var(--lb-color-base-400);
-  --lb-status-bar-background-color: var(--lb-color-base-900);
-  --lb-status-bar-action-color: var(--lb-color-accent-400);
-  --lb-status-bar-item-color-positive: var(--lb-color-positive-500);
-  --lb-status-bar-item-color-error: var(--lb-color-negative-500);
-  --lb-status-bar-item-color-warning: var(--lb-color-warning-500);
-  --lb-status-bar-item-color-info: var(--lb-color-info-300);
-  --lb-status-bar-notifications-color: var(--lb-dropdown-color);
-  --lb-status-bar-notifications-background-color: var(
-    --lb-dropdown-background-color
-  );
+  --lb-status-bar-color: var(--lb-color-content-2);
+  --lb-status-bar-background-color: var(--lb-color-surface-1);
+  --lb-status-bar-action-color: var(--lb-color-content-1-accent);
 
   /*
    * Page
    */
 
-  --lb-page-color: var(--lb-body-color);
-  --lb-page-background-color: var(--lb-color-base-800);
-  --lb-page-divider-color: var(--lb-divider-color);
-  --lb-page-title-color: var(--lb-body-color);
+  --lb-page-color: var(--lb-color-content-1);
+  --lb-page-background-color: var(--lb-color-surface-1);
+  --lb-page-divider-color: var(--lb-color-surface-divider);
+  --lb-page-title-color: var(--lb-color-content-1);
 
   /*
    * System message
    */
 
-  --lb-system-message-color: var(--lb-color-base-500);
-  --lb-system-message-background-color: var(--lb-color-white);
-  --lb-system-message-border-color: var(--lb-divider-color);
-  --lb-system-message-title-color: var(--lb-color-base-900);
-  --lb-system-message-icon-color: var(--lb-color-base-300);
+  --lb-system-message-color: var(--lb-color-content-2);
+  --lb-system-message-background-color: var(--lb-color-surface-1);
+  --lb-system-message-border-color: var(--lb-color-surface-divider);
+  --lb-system-message-title-color: var(--lb-color-content-1);
+  --lb-system-message-icon-color: var(--lb-color-content-3);
 
-  --lb-system-message-title-color-error: var(--lb-color-negative-600);
-  --lb-system-message-border-color-error: var(--lb-color-negative-200);
-  --lb-system-message-icon-color-error: var(--lb-color-negative-300);
+  --lb-system-message-title-color-error: var(--lb-color-content-negative);
+  --lb-system-message-icon-color-error: var(--lb-color-content-negative);
 
   /*
    * Viewport
    */
 
-  --lb-viewport-background-color: var(--lb-color-white);
-  --lb-viewport-dimensions-background-color: var(--lb-color-base-200);
-  --lb-viewport-handle-background-color: var(--lb-color-base-800);
-  --lb-viewport-handle-icon-color: var(--lb-color-base-500);
-
-  /*
-   * Display options dropdown
-   */
-
-  --lb-display-options-color: var(--lb-dropdown-color);
-  --lb-display-options-background-color: var(--lb-dropdown-background-color);
+  --lb-viewport-background-color: var(--lb-color-surface-1);
+  --lb-viewport-dimensions-background-color: var(--lb-color-surface-3);
+  --lb-viewport-handle-background-color: var(--lb-color-surface-1);
+  --lb-viewport-handle-icon-color: var(--lb-color-content-2);
 
   /*
    * Color scheme switcher
    */
 
-  --lb-color-scheme-switcher-background-color: var(
-    --lb-dropdown-background-color
+  --lb-color-scheme-switcher-button-color: var(--lb-color-content-2);
+  --lb-color-scheme-switcher-button-color-hover: var(--lb-color-content-1);
+  --lb-color-scheme-switcher-icon-color: var(--lb-color-content-2);
+  --lb-color-scheme-switcher-icon-color-hover: var(--lb-color-content-1);
+  --lb-color-scheme-switcher-button-color-selected: var(
+    --lb-color-content-1-accent
   );
-  --lb-color-scheme-switcher-button-color: var(--lb-color-base-300);
-  --lb-color-scheme-switcher-button-color-hover: var(--lb-color-base-100);
-  --lb-color-scheme-switcher-icon-color: var(--lb-color-base-300);
-  --lb-color-scheme-switcher-icon-color-hover: var(--lb-color-base-200);
-  --lb-color-scheme-switcher-button-color-selected: var(--lb-color-accent-400);
-  --lb-color-scheme-switcher-icon-color-selected: var(--lb-color-accent-400);
+  --lb-color-scheme-switcher-icon-color-selected: var(
+    --lb-color-content-1-accent
+  );
 }
