More theme refinements

--- a/app/views/layouts/lookbook/skeleton.html.erb
+++ b/app/views/layouts/lookbook/skeleton.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" data-color-scheme="<%= cookies["lookbook-color-scheme"] || "light" %>" data-theme="<%= @config.ui_theme %>">
+<html lang="en" data-color-scheme="<%= cookies["lookbook-color-scheme"] || "light" %>">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
