--- a/public/lookbook-assets/mailer.css
+++ b/public/lookbook-assets/mailer.css
@@ -8,6 +8,18 @@
   --lb-color-white: #fff;
   --lb-color-black: #000;
 
+  --lb-color-stone-50: #fafaf9;
+  --lb-color-stone-100: #f5f5f4;
+  --lb-color-stone-200: #e7e5e4;
+  --lb-color-stone-300: #d6d3d1;
+  --lb-color-stone-400: #a8a29e;
+  --lb-color-stone-500: #78716c;
+  --lb-color-stone-600: #57534e;
+  --lb-color-stone-700: #44403c;
+  --lb-color-stone-800: #292524;
+  --lb-color-stone-900: #1c1917;
+  --lb-color-stone-950: #0c0a09;
+
   --lb-color-gray-50: #f9fafb;
   --lb-color-gray-100: #f3f4f6;
   --lb-color-gray-200: #e5e7eb;
@@ -268,81 +280,210 @@
 
   --lb-panel-padding: var(--lb-spacing-md);
 }
-:root,
-:root[data-theme="indigo"] {
-  --lb-color-accent-50: var(--lb-color-indigo-50);
-  --lb-color-accent-100: var(--lb-color-indigo-100);
-  --lb-color-accent-200: var(--lb-color-indigo-200);
-  --lb-color-accent-300: var(--lb-color-indigo-300);
-  --lb-color-accent-400: var(--lb-color-indigo-400);
-  --lb-color-accent-500: var(--lb-color-indigo-500);
-  --lb-color-accent-600: var(--lb-color-indigo-600);
-  --lb-color-accent-700: var(--lb-color-indigo-700);
-  --lb-color-accent-800: var(--lb-color-indigo-800);
-  --lb-color-accent-900: var(--lb-color-indigo-900);
-  --lb-color-accent-950: var(--lb-color-indigo-950);
+:root {
+  /*
+   * Default values
+   */
 
-  --lb-color-base-50: var(--lb-color-slate-50);
-  --lb-color-base-100: var(--lb-color-slate-100);
-  --lb-color-base-200: var(--lb-color-slate-200);
-  --lb-color-base-300: var(--lb-color-slate-300);
-  --lb-color-base-400: var(--lb-color-slate-400);
-  --lb-color-base-500: var(--lb-color-slate-500);
-  --lb-color-base-600: var(--lb-color-slate-600);
-  --lb-color-base-700: var(--lb-color-slate-700);
-  --lb-color-base-800: var(--lb-color-slate-800);
-  --lb-color-base-900: var(--lb-color-slate-900);
-  --lb-color-base-950: var(--lb-color-slate-950);
-}
-:root[data-theme="pink"] {
-  --lb-color-accent-50: var(--lb-color-pink-50);
-  --lb-color-accent-100: var(--lb-color-pink-100);
-  --lb-color-accent-200: var(--lb-color-pink-200);
-  --lb-color-accent-300: var(--lb-color-pink-300);
-  --lb-color-accent-400: var(--lb-color-pink-400);
-  --lb-color-accent-500: var(--lb-color-pink-500);
-  --lb-color-accent-600: var(--lb-color-pink-600);
-  --lb-color-accent-700: var(--lb-color-pink-700);
-  --lb-color-accent-800: var(--lb-color-pink-800);
-  --lb-color-accent-900: var(--lb-color-pink-900);
-  --lb-color-accent-950: var(--lb-color-pink-950);
+  --lb-color-surface-1: var(--lb-color-white);
+  --lb-color-surface-2: var(--lb-color-gray-50);
+  --lb-color-surface-3: var(--lb-color-gray-100);
 
-  --lb-color-base-50: var(--lb-color-gray-50);
-  --lb-color-base-100: var(--lb-color-gray-100);
-  --lb-color-base-200: var(--lb-color-gray-200);
-  --lb-color-base-300: var(--lb-color-gray-300);
-  --lb-color-base-400: var(--lb-color-gray-400);
-  --lb-color-base-500: var(--lb-color-gray-500);
-  --lb-color-base-600: var(--lb-color-gray-600);
-  --lb-color-base-700: var(--lb-color-gray-700);
-  --lb-color-base-800: var(--lb-color-gray-800);
-  --lb-color-base-900: var(--lb-color-gray-900);
-  --lb-color-base-950: var(--lb-color-gray-950);
-}
-:root[data-theme="fuscia"] {
-  --lb-color-accent-50: var(--lb-color-fuscia-50);
-  --lb-color-accent-100: var(--lb-color-fuscia-100);
-  --lb-color-accent-200: var(--lb-color-fuscia-200);
-  --lb-color-accent-300: var(--lb-color-fuscia-300);
-  --lb-color-accent-400: var(--lb-color-fuscia-400);
-  --lb-color-accent-500: var(--lb-color-fuscia-500);
-  --lb-color-accent-600: var(--lb-color-fuscia-600);
-  --lb-color-accent-700: var(--lb-color-fuscia-700);
-  --lb-color-accent-800: var(--lb-color-fuscia-800);
-  --lb-color-accent-900: var(--lb-color-fuscia-900);
-  --lb-color-accent-950: var(--lb-color-fuscia-950);
+  --lb-color-surface-divider: var(--lb-color-gray-300);
+  --lb-color-surface-inverted: var(--lb-color-gray-800);
+  --lb-color-surface-accent: var(--lb-color-indigo-600);
 
-  --lb-color-base-50: var(--lb-color-gray-50);
-  --lb-color-base-100: var(--lb-color-gray-100);
-  --lb-color-base-200: var(--lb-color-gray-200);
-  --lb-color-base-300: var(--lb-color-gray-300);
-  --lb-color-base-400: var(--lb-color-gray-400);
-  --lb-color-base-500: var(--lb-color-gray-500);
-  --lb-color-base-600: var(--lb-color-gray-600);
-  --lb-color-base-700: var(--lb-color-gray-700);
-  --lb-color-base-800: var(--lb-color-gray-800);
-  --lb-color-base-900: var(--lb-color-gray-900);
-  --lb-color-base-950: var(--lb-color-gray-950);
+  --lb-color-content-1: var(--lb-color-gray-800);
+  --lb-color-content-2: var(--lb-color-gray-500);
+  --lb-color-content-3: var(--lb-color-gray-300);
+
+  --lb-color-content-1-accent: var(--lb-color-indigo-700);
+  --lb-color-content-2-accent: var(--lb-color-indigo-500);
+  --lb-color-content-3-accent: var(--lb-color-indigo-300);
+
+  --lb-color-content-inverted: var(--lb-color-white);
+  --lb-color-content-positive: var(--lb-color-positive-600);
+  --lb-color-content-negative: var(--lb-color-negative-600);
+  --lb-color-content-info: var(--lb-color-info-600);
+
+  --lb-color-content-positive: var(--lb-color-positive-600);
+  --lb-color-content-negative: var(--lb-color-negative-600);
+  --lb-color-content-info: var(--lb-color-info-600);
+  --lb-color-content-warning: var(--lb-color-warning-600);
+
+  /*
+   * General
+   */
+
+  --lb-focus-outline-color: var(--lb-color-content-3-accent);
+
+  /*
+   * Buttons
+   */
+
+  --lb-button-color: var(--lb-color-content-2);
+  --lb-button-color-hover: var(--lb-color-content-1);
+  --lb-button-color-active: var(--lb-color-content-2-accent);
+
+  /*
+   * Inputs
+   */
+
+  --lb-input-color: var(--lb-color-content-1);
+  --lb-input-background-color: var(--lb-color-surface-1);
+  --lb-input-border-color: var(--lb-color-surface-divider);
+  --lb-input-outline-color-focus: var(--lb-color-content-3-accent);
+  --lb-input-placeholder-color: var(--lb-color-content-2);
+
+  --lb-checkbox-color: var(--lb-color-content-1-accent);
+  --lb-checkbox-background-color: var(--lb-color-surface-1);
+  --lb-checkbox-border-color: var(--lb-color-content-3);
+  --lb-checkbox-outline-color-focus: var(--lb-color-content-2-accent);
+
+  /*
+   * Tables
+   */
+
+  --lb-table-color: var(--lb-color-content-1);
+  --lb-table-border-color: var(--lb-color-surface-divider);
+  --lb-table-background-color: var(--lb-color-surface-1);
+
+  /*
+   * Dropdowns
+   */
+
+  --lb-dropdown-color: var(--lb-color-content-1);
+  --lb-dropdown-background-color: var(--lb-color-surface-1);
+  --lb-dropdown-border-color: var(--lb-color-surface-divider);
+
+  /*
+   * Toolbars
+   */
+
+  --lb-toolbar-color: var(--lb-color-content-1);
+  --lb-toolbar-background-color: var(--lb-color-surface-1);
+
+  /*
+   * Tabs
+   */
+
+  --lb-tab-color: var(--lb-color-content-2);
+  --lb-tab-color-disabled: var(--lb-color-content-3);
+  --lb-tab-color-selected: var(--lb-color-content-2-accent);
+  --lb-tab-border-color-selected: var(--lb-color-content-2-accent);
+  --lb-tab-panel-color: var(--lb-color-content-1);
+  --lb-tab-panel-background-color: var(--lb-color-surface-2);
+
+  /*
+   * Panes
+   */
+
+  --lb-pane-background-color: var(--lb-color-surface-2);
+
+  /*
+   * Prose
+   */
+
+  --lb-prose-color: var(--lb-color-content-1);
+  --lb-prose-list-counter-color: var(--lb-color-content-2);
+  --lb-prose-list-marker-color: var(--lb-color-content-2);
+  --lb-prose-hr-color: var(--lb-color-content-2);
+  --lb-prose-blockquote-color: var(--lb-color-content-2);
+  --lb-prose-blockquote-border-color: var(--lb-color-content-3);
+  --lb-prose-figcaption-color: var(--lb-color-content-2);
+  --lb-prose-inline-code-color: var(--lb-color-content-accent-1);
+  --lb-prose-inline-code-background-color: var(--lb-color-surface-2);
+  --lb-prose-code-background-color: var(--lb-color-surface-1);
+  --lb-prose-code-border-color: var(--lb-color-surface-divider);
+
+  /*
+   * Breadcrumbs
+   */
+
+  --lb-breadrumbs-color: var(--lb-color-content-2);
+  --lb-breadrumbs-color-current: var(--lb-color-content-1);
+  --lb-breadrumbs-link-color: var(--lb-color-content-2);
+  --lb-breadrumbs-link-color-hover: var(--lb-color-content-2-accent);
+
+  /*
+   * Header
+   */
+
+  --lb-header-color: var(--lb-color-content-inverted);
+  --lb-header-background-color: var(--lb-color-surface-accent);
+
+  /*
+   * Nav
+   */
+
+  --lb-nav-item-background-color: transparent;
+  --lb-nav-item-border-color: transparent;
+  --lb-nav-item-label-color: var(--lb-color-content-1);
+  --lb-nav-item-icon-color: var(--lb-color-content-1-accent);
+  --lb-nav-item-toggle-color: var(--lb-color-content-2);
+
+  --lb-nav-item-background-color-selected: var(--lb-color-surface-3);
+  --lb-nav-item-border-color-selected: var(--lb-color-content-2-accent);
+  --lb-nav-item-label-color-selected: var(--lb-color-content-1);
+  --lb-nav-item-label-color-hover: var(--lb-color-content-1);
+
+  --lb-nav-placeholder-color: var(--lb-color-content-2);
+  --lb-nav-placeholder-border-color: var(--lb-color-surface-divider);
+  --lb-nav-placeholder-background-color: var(--lb-color-surface-1);
+
+  /*
+   * Status bar
+   */
+
+  --lb-status-bar-color: var(--lb-color-content-2);
+  --lb-status-bar-background-color: var(--lb-color-surface-1);
+  --lb-status-bar-action-color: var(--lb-color-content-1-accent);
+
+  /*
+   * Page
+   */
+
+  --lb-page-color: var(--lb-color-content-1);
+  --lb-page-background-color: var(--lb-color-surface-1);
+  --lb-page-divider-color: var(--lb-color-surface-divider);
+  --lb-page-title-color: var(--lb-color-content-1);
+
+  /*
+   * System message
+   */
+
+  --lb-system-message-color: var(--lb-color-content-2);
+  --lb-system-message-background-color: var(--lb-color-surface-1);
+  --lb-system-message-border-color: var(--lb-color-surface-divider);
+  --lb-system-message-title-color: var(--lb-color-content-1);
+  --lb-system-message-icon-color: var(--lb-color-content-3);
+
+  --lb-system-message-title-color-error: var(--lb-color-content-negative);
+  --lb-system-message-icon-color-error: var(--lb-color-content-negative);
+
+  /*
+   * Viewport
+   */
+
+  --lb-viewport-background-color: var(--lb-color-surface-1);
+  --lb-viewport-dimensions-background-color: var(--lb-color-surface-3);
+  --lb-viewport-handle-background-color: var(--lb-color-surface-1);
+  --lb-viewport-handle-icon-color: var(--lb-color-content-2);
+
+  /*
+   * Color scheme switcher
+   */
+
+  --lb-color-scheme-switcher-button-color: var(--lb-color-content-2);
+  --lb-color-scheme-switcher-button-color-hover: var(--lb-color-content-1);
+  --lb-color-scheme-switcher-icon-color: var(--lb-color-content-2);
+  --lb-color-scheme-switcher-icon-color-hover: var(--lb-color-content-1);
+  --lb-color-scheme-switcher-button-color-selected: var(
+    --lb-color-content-1-accent
+  );
+  --lb-color-scheme-switcher-icon-color-selected: var(
+    --lb-color-content-1-accent
+  );
 }
 @font-face {
   font-family: "Inter Var";
@@ -614,8 +755,11 @@ router {
   display: none !important;
 }
 table {
+  background: #fff;
   background: var(--lb-table-background-color);
+  border: 1px solid #d1d5db;
   border: 1px solid var(--lb-table-border-color);
+  color: #1f2937;
   color: var(--lb-table-color);
   width: 100%;
   border-collapse: collapse;
@@ -637,11 +781,13 @@ td {
 }
 thead tr,
 tr:not(:last-child) {
+  border-bottom: 1px solid #d1d5db;
   border-bottom: 1px solid var(--lb-table-border-color);
 }
 :focus-visible {
   outline: 1px solid transparent;
   outline-offset: 0;
+  outline-color: #a5b4fc;
   outline-color: var(--lb-focus-outline-color);
 }
 /* Utilities */
@@ -667,6 +813,7 @@ header {
   font-family: "Inter Var", Roboto, "Helvetica Neue", "Arial Nova",
     "Nimbus Sans", Arial, sans-serif;
   font-family: var(--lb-font-ui);
+  border-bottom: 1px solid #d1d5db;
   border-bottom: 1px solid var(--lb-color-surface-divider);
   overflow: hidden;
 }
