Fix notes panel theming

--- a/app/views/lookbook/inspector/panels/_notes.html.erb
+++ b/app/views/lookbook/inspector/panels/_notes.html.erb
@@ -1,7 +1,7 @@
 <style>
   .panel {
     padding: var(--lb-panel-padding);
-    background: var(--lb-color-white);
+    background: var(--lb-color-surface-2);
     height: 100%;
   }
 
@@ -14,17 +14,17 @@
   }
 
   section + section {
-    border-top: 1px dashed var(--lb-color-base-400);
+    border-top: 1px dashed var(--lb-color-surface-divider);
   }
 
   .label {
-    color: var(--lb-color-base-800);
+    color: var(--lb-color-content-1);
     margin-bottom: var(--lb-spacing-sm);
     font-weight: 500;
   }
 
   .placeholder {
-    color: var(--lb-color-base-400);
+    color: var(--lb-color-content-3);
     font-style: italic;
   }
 </style>
