--- a/app/components/lookbook/ui/previews/preview_inspector/preview_inspector.html.erb
+++ b/app/components/lookbook/ui/previews/preview_inspector/preview_inspector.html.erb
@@ -40,7 +40,7 @@
 
           preview_panels.each do |panel|
             pane.with_tab_panel(panel.name, key: "inspector-panel-#{@target.name}-#{panel.name}", label: panel.label) do
-              render panel.partial, preview: preview, target: target, panel: panel
+              render panel.partial, preview: preview, target: target, panel: panel, **panel.locals
             end
           end
         end
@@ -60,7 +60,7 @@
       
         drawer_panels.each do |panel|
           pane.with_tab_panel(panel.name, key: "inspector-panel-#{@target.name}-#{panel.name}", label: panel.label) do
-            render panel.partial, preview: preview, target: target, panel: panel
+            render panel.partial, preview: preview, target: target, panel: panel, **panel.locals
           end
         end
       end
