Fix layout with no status bar

--- a/app/components/lookbook/ui/app/layout/layout.css
+++ b/app/components/lookbook/ui/app/layout/layout.css
@@ -1,6 +1,7 @@
 [data-component="layout"] {
   height: 100vh;
   display: grid;
+  grid-template-rows: min-content 1fr;
 
   &[data-status-bar="true"] {
     grid-template-rows: min-content 1fr min-content;
