--- a/public/lookbook-assets/app.css
+++ b/public/lookbook-assets/app.css
@@ -1161,6 +1161,7 @@ select {
 [data-component="layout"] {
   height: 100vh;
   display: grid;
+  grid-template-rows: min-content 1fr;
 }
 [data-component="layout"][data-status-bar="true"] {
     grid-template-rows: min-content 1fr min-content;
