Add light + dark versions of checked background

--- a/app/components/lookbook/ui/app/system_page/system_page.css
+++ b/app/components/lookbook/ui/app/system_page/system_page.css
@@ -1,5 +1,6 @@
 [data-component="system-page"] {
   padding: var(--lb-spacing-lg);
+  background: var(--lb-background-checked);
   height: 100%;
   width: 100%;
   display: flex;
