--- a/app/components/lookbook/ui/elements/viewport/viewport.css
+++ b/app/components/lookbook/ui/elements/viewport/viewport.css
@@ -5,6 +5,7 @@
   overflow: hidden;
   position: relative;
   background-color: var(--lb-viewport-background-color);
+  background: var(--lb-background-checked);
   user-select: none;
   touch-action: none;
 
