--- a/app/components/lookbook/ui/app/system_page/system_page.html.erb
+++ b/app/components/lookbook/ui/app/system_page/system_page.html.erb
@@ -1,3 +1,3 @@
-<%= render component_tag(class: "bg-checked", data: {theme: theme}) do %>
+<%= render component_tag(data: {theme: theme}) do %>
   <%= message %>
 <% end %>
