--- a/app/components/lookbook/ui/elements/prose/prose.html.erb
+++ b/app/components/lookbook/ui/elements/prose/prose.html.erb
@@ -1,3 +1,3 @@
-<%= render component_tag(x: {data: "prose"}) do %>
+<%= render component_tag(x: {data: "prose"}, data: {size: size}) do %>
   <%= prose %>
 <% end %>
